[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "armbnfmentorer"
version = "0.0.1"
description = "qc and vap stuff"
authors = [{ name = "Hagen Telg", email = "hagen.telg@noaa.gov" }]
requires-python = ">=3.12"

dependencies = []

#[project.optional-dependencies]
#docs = [
#  "mkdocs>=1.6",
#  "mkdocs-material",
#  "mkdocstrings[python]",
#  "mkdocs-jupyter",
#  "pymdown-extensions",
#]

[tool.hatch.build.targets.wheel]
packages = ["armbnfmentorer"]